--- a/Jobsheet_04_PBO.ipynb
+++ b/Jobsheet_04_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/J/YtTbobQqua5DW6lh90",
+      "authorship_tag": "ABX9TyOxZqCR2jbPts4xCw+BWRhN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,10 +37,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "hbFruEUOi00R",
-        "outputId": "fb5d65fb-c25d-4861-d639-4ef3fa115e69",
+        "outputId": "87599094-3ad0-4510-9669-b437465412b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -132,12 +132,12 @@
       ],
       "metadata": {
         "id": "lMGW-PZNkjXz",
-        "outputId": "626783a7-2aff-4a90-a5f8-5e4ccbb06fa3",
+        "outputId": "0e29e6f0-486a-4665-faa4-ea1d7029c3e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,12 +213,12 @@
       ],
       "metadata": {
         "id": "uqakIi2EnRdp",
-        "outputId": "9a68aa3f-6d38-402c-96e3-a7c83a79e5ed",
+        "outputId": "e3aa0bcd-9a26-4622-e2f5-5a166a003822",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,12 +287,12 @@
       ],
       "metadata": {
         "id": "78vLq2VQo4Fl",
-        "outputId": "3fee0d4e-5e77-4015-b251-c9b952d3e1e2",
+        "outputId": "8d55d58d-3b21-45a5-f7e9-0fbc60fbe4b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,12 +329,12 @@
       ],
       "metadata": {
         "id": "yJTZmF1JrHHS",
-        "outputId": "3f4d4913-2ea0-4a3c-c0bc-1756784d8543",
+        "outputId": "1f3922bb-ea73-4400-bd9b-3dab1e9c2abe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,12 +428,12 @@
       ],
       "metadata": {
         "id": "-6BtLn4PsGe0",
-        "outputId": "db506274-88b3-4c55-b471-2d6b12c6fbb0",
+        "outputId": "e5faf71e-8989-4cd0-c4ed-b87a3d79f6eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,12 +527,12 @@
       ],
       "metadata": {
         "id": "ACQq5JBeyWGT",
-        "outputId": "31337ea7-b2cb-4e26-9d01-928bd55e3c56",
+        "outputId": "8053ddbc-496a-43e1-fdec-ffa8c89e26f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,16 +570,92 @@
       "cell_type": "code",
       "source": [
         "class Mahasiswa:\n",
-        "  def __inti__(self, nama, NIM, IPK):\n",
+        "  def __init__(self, nama, NIM, IPK):\n",
         "    self.nama = nama\n",
         "    self.NIM = NIM\n",
-        "    self.IPK = IPK"
+        "    self.IPK = IPK\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(f\"Nama: {self.nama}\")\n",
+        "    print(f\"NIM: {self.NIM}\")\n",
+        "    print(f\"IPK: {self.IPK}\")\n",
+        "\n",
+        "  def predikat_IPK(self):\n",
+        "    if self.IPK >= 3.5:\n",
+        "      print(\"Predikat: Dengan Pujian\")\n",
+        "    elif self.IPK >= 3.0:\n",
+        "      print(\"Predikat: Sangat Memuaskan\")\n",
+        "    elif self.IPK >= 2.5:\n",
+        "      print(\"Predikat: Memuaskan\")\n",
+        "    else:\n",
+        "      print(\"Predikat: Cukup\")\n",
+        "\n",
+        "  class MahasiswaSarjana(Mahasiswa):\n",
+        "    def __init__(self, nama, NIM, IPK, semester, sks_lulus):\n",
+        "      super().__init__(nama, NIM, IPK)\n",
+        "      self.semester = semester\n",
+        "      self.sks_lulus = sks_lulus\n",
+        "\n",
+        "    def tampilkan_info(self):\n",
+        "      print(\"--- Info Mahasiswa Sarjana ---\")\n",
+        "      super().tampilkan_info()\n",
+        "      print(f\"Semester: {self.semester}\")\n",
+        "      print(f\"SKS Lulus: {self.sks_lulus}\")\n",
+        "\n",
+        "class MahasiswaMagister(Mahasiswa):\n",
+        "  def __init__(self, nama, NIM, IPK, judul_tesis, nama_pembimbing):\n",
+        "    super().__init__(nama,NIM, IPK)\n",
+        "    self.judul_tesis = judul_tesis\n",
+        "    self.nama_pembimbing = nama_pembimbing\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(\"--- Info Mahasiswa Magister ---\")\n",
+        "    super().tampilkan_info()\n",
+        "    print(f\"Judul Tesis: {self.judul_tesis}\")\n",
+        "    print(f\"Nama pembimbing: {self.nama_pembimbing}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  mhs1 = MahasiswaSarjana(\"Rasha Sarasvati\", \"87654321\", 3.8, 8, 140)\n",
+        "  mhs1.tampilkan_info()\n",
+        "  mhs1.predikat_IPK()\n",
+        "  print()\n",
+        "  mhs2 = MahasiswaMagister(\"Bianca Mayangsari\", \"12345678\", 3.8, \"Pengaruh Teknologi Informasi terhadap Produktivitas Kerja\", \"Dr. Ahmad Fauzi\")\n",
+        "  mhs2.tampilkan_info()\n",
+        "  mhs2.predikat_IPK()\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "CSXTNZ9n5tBn"
+        "id": "CSXTNZ9n5tBn",
+        "outputId": "c766c0a3-8a40-450e-cb25-28372c9329a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Info Mahasiswa Sarjana ---\n",
+            "Nama: Jane Smith\n",
+            "NIM: 87654321\n",
+            "IPK: 3.2\n",
+            "Semester: 8\n",
+            "SKS Lulus: 140\n",
+            "Predikat: Sangat Memuaskan\n",
+            "\n",
+            "--- Info Mahasiswa Magister ---\n",
+            "Nama: John Doe\n",
+            "NIM: 12345678\n",
+            "IPK: 3.8\n",
+            "Judul Tesis: Pengaruh Teknologi Informasi terhadap Produktivitas Kerja\n",
+            "Nama pembimbing: Dr. Ahmad Fauzi\n",
+            "Predikat: Dengan Pujian\n"
+          ]
+        }
+      ]
     }
   ]
 }
