--- a/Jobsheet_04_PBO.ipynb
+++ b/Jobsheet_04_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNF4sqNXNJ9ApsBR+BZuqNs",
+      "authorship_tag": "ABX9TyPNclJ4voLiRNN66b1pQdpn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UPtDSsuo3eqa",
-        "outputId": "66a19a3f-cc50-4487-b7b3-899d3ccd9158"
+        "outputId": "b4171494-dd21-4384-e526-229d6fa7b0f4"
       },
       "outputs": [
         {
@@ -135,9 +135,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-kjs7qIJ4g9o",
-        "outputId": "cb36e877-bb71-4b66-fc44-1cc244eb9f86"
+        "outputId": "8ed3e144-917d-42d7-d36d-8a8f1bf89342"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,6 +163,507 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Praktikum 03:Method Overriding dan super()"
+      ],
+      "metadata": {
+        "id": "48ONLIQC6y6o"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Hewan:\n",
+        "  def __init__(self, nama):\n",
+        "    self.nama = nama\n",
+        "\n",
+        "  def bersuara(self):\n",
+        "    print(f\"{self.nama} mengeluarkan suara generik.\")\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(f\"Ini adalah hewan bernama {self.nama}.\")\n",
+        "\n",
+        "class Kucing(Hewan):\n",
+        "  def __init__(self, nama, ras):\n",
+        "    super().__init__(nama)\n",
+        "    self.ras = ras\n",
+        "\n",
+        "  def bersuara(self):\n",
+        "    print(f\"{self.nama} (Kucing) mengeong: Meow!\")\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    super().tampilkan_info()\n",
+        "    print(f\"Ini adalah kucing ras {self.ras}.\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  hewan_umum = Hewan(\"Makhluk\")\n",
+        "  kucing_persia = Kucing(\"Puspus\", \"Persia\")\n",
+        "\n",
+        "  print(\"Info Hewan Umum:\")\n",
+        "  hewan_umum.tampilkan_info()\n",
+        "  hewan_umum.bersuara()\n",
+        "  print(\"-\" * 20)\n",
+        "\n",
+        "  print(\"Info Kucing Persia:\")\n",
+        "  kucing_persia.tampilkan_info()\n",
+        "  kucing_persia.bersuara()"
+      ],
+      "metadata": {
+        "id": "q48muTtd63lK",
+        "outputId": "6ff20403-36d5-4bc0-cdf8-cf2c15131615",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Info Hewan Umum:\n",
+            "Ini adalah hewan bernama Makhluk.\n",
+            "Makhluk mengeluarkan suara generik.\n",
+            "--------------------\n",
+            "Info Kucing Persia:\n",
+            "Ini adalah hewan bernama Puspus.\n",
+            "Ini adalah kucing ras Persia.\n",
+            "Puspus (Kucing) mengeong: Meow!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Praktikum 04: Multi-level Inheritance (Pewarisna Bertingkat)"
+      ],
+      "metadata": {
+        "id": "hyRGcww-7BJh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Organisme:\n",
+        "  def __init__(self, nama):\n",
+        "    self.nama = nama\n",
+        "    print(f\"Organisme '{self.nama}' diciptakan.\")\n",
+        "\n",
+        "  def bernapas(self):\n",
+        "    print(f\"{self.nama} sedang bernapas.\")\n",
+        "\n",
+        "class Hewan(Organisme):\n",
+        "  def __init__(self, nama, jenis_makanan):\n",
+        "    super().__init__(nama)\n",
+        "    self.jenis_makanan = jenis_makanan\n",
+        "    print(f\"Hewan '{self.nama}' adlaah {self.jenis_makanan}.\")\n",
+        "\n",
+        "  def bergerak(self):\n",
+        "    print(f\"{self.nama} sedang bergerak.\")\n",
+        "\n",
+        "class Mamalia(Hewan):\n",
+        "  def __init__(self, nama, jenis_makanan, jumlah_kaki):\n",
+        "    super().__init__(nama, jenis_makanan)\n",
+        "    self.jumlah_kaki = jumlah_kaki\n",
+        "    print(f\"Mamalia '{self.nama}' memilii {self.jumlah_kaki} kaki.\")\n",
+        "\n",
+        "  def menyusui(self):\n",
+        "    print(f\"{self.nama} sedang menyusui.\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  kucing = Mamalia(\"Kucing Persia\", \"Karnivora\", 4)\n",
+        "  print(\"-\" * 20)\n",
+        "\n",
+        "  kucing.menyusui()\n",
+        "  kucing.bergerak()\n",
+        "  print(f\"Jenis makanan: {kucing.jenis_makanan}\")\n",
+        "  kucing.bernapas()\n",
+        "  print(f\"Nama organisme: {kucing.nama}\")"
+      ],
+      "metadata": {
+        "id": "RSjUExrs7LOP",
+        "outputId": "962996dc-e6c2-436b-ea14-7650949fbeba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Organisme 'Kucing Persia' diciptakan.\n",
+            "Hewan 'Kucing Persia' adlaah Karnivora.\n",
+            "Mamalia 'Kucing Persia' memilii 4 kaki.\n",
+            "--------------------\n",
+            "Kucing Persia sedang menyusui.\n",
+            "Kucing Persia sedang bergerak.\n",
+            "Jenis makanan: Karnivora\n",
+            "Kucing Persia sedang bernapas.\n",
+            "Nama organisme: Kucing Persia\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Praktikum 05: Hierarchial Inheritance"
+      ],
+      "metadata": {
+        "id": "kOfDfQh17P23"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!apt-get install -y locales\n",
+        "!locale-gen id_ID.UTF-8\n",
+        "!update-locale"
+      ],
+      "metadata": {
+        "id": "kTLocaxY72mL",
+        "outputId": "5d4abab3-0bc1-45f7-cc46-8a471aea7475",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree... Done\n",
+            "Reading state information... Done\n",
+            "locales is already the newest version (2.35-0ubuntu3.9).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 34 not upgraded.\n",
+            "Generating locales (this might take a while)...\n",
+            "  id_ID.UTF-8... done\n",
+            "Generation complete.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import locale\n",
+        "\n",
+        "try:\n",
+        "  locale.setlocale(locale.LC_ALL, 'id_ID.UTF-8')\n",
+        "except locale.Error:\n",
+        "  print(\"Locale id_ID>UTF-9 tidak tersedia, menggunakan locale default.\")\n",
+        "\n",
+        "def format_rupiah(angka):\n",
+        "  return locale.currency(angka, grouping=True, symbol='Rp ')\n",
+        "\n",
+        "class Pegawai:\n",
+        "  def __init__(self, nama, id_pegawai, gaji_pokok):\n",
+        "    self.nama = nama\n",
+        "    self.id_pegawai = id_pegawai\n",
+        "    self.gaji_pokok = gaji_pokok\n",
+        "\n",
+        "  def hitung_gaji(self):\n",
+        "    return self.gaji_pokok\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(f\"ID: {self.id_pegawai}, Nama: {self.nama}\")\n",
+        "    print(f\"Gaji Pokok: {format_rupiah(self.gaji_pokok)}\")\n",
+        "\n",
+        "class Manager(Pegawai):\n",
+        "  def __init__(self, nama, id_pegawai, gaji_pokok, tunjangan_jabatan):\n",
+        "    super().__init__(nama, id_pegawai, gaji_pokok)\n",
+        "    self.tunjangan_jabatan = tunjangan_jabatan\n",
+        "\n",
+        "  def hitung_gaji(self):\n",
+        "    gaji_total = super().hitung_gaji() + self.tunjangan_jabatan\n",
+        "    return gaji_total\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(\"--- Info Manager ---\")\n",
+        "    super().tampilkan_info()\n",
+        "    print(f\"Tunjangan Jabatan: {format_rupiah(self.tunjangan_jabatan)}\")\n",
+        "    print(f\"Total Gaji: {format_rupiah(self.hitung_gaji())}\")\n",
+        "\n",
+        "class StafTeknis(Pegawai):\n",
+        "  def __init__(self, nama, id_pegawai, gaji_pokok, keahlian, bonus_keahlian):\n",
+        "    super().__init__(nama, id_pegawai, gaji_pokok)\n",
+        "    self.keahlian = keahlian\n",
+        "    self.bonus_keahlian = bonus_keahlian\n",
+        "\n",
+        "  def hitung_gaji(self):\n",
+        "    gaji_total = super().hitung_gaji() + self.bonus_keahlian\n",
+        "    return gaji_total\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(\"--- Info Staf Teknis ---\")\n",
+        "    super().tampilkan_info()\n",
+        "    print(f\"Keahlian: {self.keahlian}\")\n",
+        "    print(f\"Bonus Keahlian: {format_rupiah(self.bonus_keahlian)}\")\n",
+        "    print(f\"Total Gaji: {format_rupiah(self.hitung_gaji())}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  manager1 = Manager(\"Budi Santoso\", \"M001\", 10000000, 5000000)\n",
+        "  staf1 = StafTeknis(\"Citra Lestari\", \"S001\", 7000000, \"Python Programming\", 1500000)\n",
+        "  pegawai_baru = Pegawai(\"Rian\", \"P005\", 5000000)\n",
+        "\n",
+        "  print(\"Menampilkan Infomasi Pegawai:\")\n",
+        "  manager1.tampilkan_info()\n",
+        "  print(\"-\" * 30)\n",
+        "  staf1.tampilkan_info()\n",
+        "  print(\"-\" * 30)\n",
+        "\n",
+        "  print(\"--- Info Pegawai Baru ---\")\n",
+        "  pegawai_baru.tampilkan_info()\n",
+        "  print(f\"Total Gaji: {format_rupiah(pegawai_baru.hitung_gaji())}\")\n",
+        "\n",
+        "  print(\"-\" * 30)"
+      ],
+      "metadata": {
+        "id": "UmkGqrXJ8Ihc",
+        "outputId": "3ed6d18e-f01d-4ecb-fea2-28a322dfdd5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Menampilkan Infomasi Pegawai:\n",
+            "--- Info Manager ---\n",
+            "ID: M001, Nama: Budi Santoso\n",
+            "Gaji Pokok: Rp10.000.000,00\n",
+            "Tunjangan Jabatan: Rp5.000.000,00\n",
+            "Total Gaji: Rp15.000.000,00\n",
+            "------------------------------\n",
+            "--- Info Staf Teknis ---\n",
+            "ID: S001, Nama: Citra Lestari\n",
+            "Gaji Pokok: Rp7.000.000,00\n",
+            "Keahlian: Python Programming\n",
+            "Bonus Keahlian: Rp1.500.000,00\n",
+            "Total Gaji: Rp8.500.000,00\n",
+            "------------------------------\n",
+            "--- Info Pegawai Baru ---\n",
+            "ID: P005, Nama: Rian\n",
+            "Gaji Pokok: Rp5.000.000,00\n",
+            "Total Gaji: Rp5.000.000,00\n",
+            "------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Praktikum 06: Memeriksa Tipe Instance dengan instance()"
+      ],
+      "metadata": {
+        "id": "HklvKSb7AYrc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class BentukGeometri:\n",
+        "  def __init__(self, nama_bentuk):\n",
+        "    self.nama = nama_bentuk\n",
+        "  def tampilkan_nama(self):\n",
+        "    print(f\"Ini adalah bentuk: {self.nama}\")\n",
+        "  def hitung_luas(self):\n",
+        "    print(f\"Luas {self.nama} tidak dapat dihitung (generik).\")\n",
+        "\n",
+        "class PersegiPanjang(BentukGeometri):\n",
+        "  def __init__(self, panjang, lebar):\n",
+        "    super().__init__(\"Persegi Panjang\")\n",
+        "    self.panjang = panjang\n",
+        "    self.lebar = lebar\n",
+        "  def hitung_luas(self):\n",
+        "    luas = self.panjang * self.lebar\n",
+        "    print(f\"Luas {self.nama}: {luas}\")\n",
+        "\n",
+        "class Segitiga(BentukGeometri):\n",
+        "  def __init__(self, alas, tinggi):\n",
+        "    super().__init__(\"Segitiga\")\n",
+        "    self.alas = alas\n",
+        "    self.tinggi = tinggi\n",
+        "  def hitung_luas(self):\n",
+        "    luas = 0.5 * self.alas * self.tinggi\n",
+        "    print(f\"Luas: {self.nama}: {luas}\")\n",
+        "\n",
+        "def proses_bentuk(bentuk):\n",
+        "  print(f\"\\nMemproses bentuk: {type(bentuk)}\")\n",
+        "\n",
+        "  if isinstance(bentuk, BentukGeometri):\n",
+        "    bentuk.tampilkan_nama()\n",
+        "    print(\"Objek ini adalah instance dari BentukGeometri (atau turunannya).\")\n",
+        "\n",
+        "    if isinstance(bentuk, PersegiPanjang):\n",
+        "      print(\"-> Objek ini juga instance dari PersegiPanjang.\")\n",
+        "    elif isinstance(bentuk, Segitiga):\n",
+        "      print(\"-> Objek ini juga instance dari Segitiga.\")\n",
+        "  else:\n",
+        "    print(\"Objek ini BUKAN instance dari BentukGeometri.\")\n",
+        "\n",
+        "  if isinstance(bentuk, str):\n",
+        "    print(\"Objek ini adalah string.\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  pp = PersegiPanjang(4, 3)\n",
+        "  seg = Segitiga(5, 2)\n",
+        "  bg = BentukGeometri(\"Lingkaran\")\n",
+        "  teks = \"ini string\"\n",
+        "\n",
+        "  daftar_objek = [pp, seg, bg, teks]\n",
+        "  for obj in daftar_objek:\n",
+        "    proses_bentuk(obj)"
+      ],
+      "metadata": {
+        "id": "n8Mpr94eAcus",
+        "outputId": "11ec836e-89b6-48a4-9bb5-8cec3a68b7d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Memproses bentuk: <class '__main__.PersegiPanjang'>\n",
+            "Ini adalah bentuk: Persegi Panjang\n",
+            "Objek ini adalah instance dari BentukGeometri (atau turunannya).\n",
+            "-> Objek ini juga instance dari PersegiPanjang.\n",
+            "\n",
+            "Memproses bentuk: <class '__main__.Segitiga'>\n",
+            "Ini adalah bentuk: Segitiga\n",
+            "Objek ini adalah instance dari BentukGeometri (atau turunannya).\n",
+            "-> Objek ini juga instance dari Segitiga.\n",
+            "\n",
+            "Memproses bentuk: <class '__main__.BentukGeometri'>\n",
+            "Ini adalah bentuk: Lingkaran\n",
+            "Objek ini adalah instance dari BentukGeometri (atau turunannya).\n",
+            "\n",
+            "Memproses bentuk: <class 'str'>\n",
+            "Objek ini BUKAN instance dari BentukGeometri.\n",
+            "Objek ini adalah string.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TUGAS"
+      ],
+      "metadata": {
+        "id": "-GBGu4kiD-cS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Mahasiswa:\n",
+        "  def __init__(self, nama, NIM, IPK):\n",
+        "    self.nama = nama\n",
+        "    self.NIM = NIM\n",
+        "    self.IPK = IPK\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(f\"Nama: {self.nama}\")\n",
+        "    print(f\"NIM: {self.NIM}\")\n",
+        "    print(f\"IPK: {self.IPK}\")\n",
+        "\n",
+        "  def predikat_IPK(self):\n",
+        "    if self.IPK >= 3.5:\n",
+        "      print(\"Predikat: Dengan Pujian\")\n",
+        "    elif self.IPK >= 3.0:\n",
+        "      print(\"Predikat: Sangat Memuaskan\")\n",
+        "    elif self.IPK >= 2.5:\n",
+        "      print(\"Predikat: Memuaskan\")\n",
+        "    else:\n",
+        "      print(\"Predikat: Cukup\")\n",
+        "\n",
+        "class MahasiwaSarjana(Mahasiswa):\n",
+        "  def __init__(self, nama, NIM, IPK, semester, sks_lulus):\n",
+        "    super().__init__(nama, NIM, IPK)\n",
+        "    self.semester = semester\n",
+        "    self.sks_lulus = sks_lulus\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(\"--- Info Mahasiswa Sarjana ---\")\n",
+        "    super().tampilkan_info()\n",
+        "    print(f\"Semester:{self.semester}\")\n",
+        "    print(f\"SKS Lulus: {self.sks_lulus}\")\n",
+        "\n",
+        "class MahasiswaMagister(Mahasiswa):\n",
+        "  def __init__(self, nama, NIM, IPK, judul_tesis, nama_pembimbing):\n",
+        "    super().__init__(nama, NIM, IPK)\n",
+        "    self.judul_tesis = judul_tesis\n",
+        "    self.nama_pembimbing = nama_pembimbing\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(\"--- Info Mahasiswa Magister ---\")\n",
+        "    super().tampilkan_info()\n",
+        "    print(f\"Judul Tesis: {self.judul_tesis}\")\n",
+        "    print(f\"Nama Pembimbing: {self.nama_pembimbing}\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  mhs1 = MahasiwaSarjana(\"Rasha Sarasvati\", \"87654321\", 3.8, 8, 140)\n",
+        "  mhs1.tampilkan_info()\n",
+        "  print()\n",
+        "  mhs2 = MahasiswaMagister(\"Jovian Abraham\", \"1234567\", 3.8, \"Pengaruh Teknologi Informasi terhadap Produktivitas Kerja\", \"Dr. Ahmad Fauzi\")\n",
+        "  mhs2.tampilkan_info()"
+      ],
+      "metadata": {
+        "id": "nOFrJ1j-D_6Y",
+        "outputId": "6658b121-b832-4bfa-9d77-12a8ce73c5e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Info Mahasiswa Sarjana ---\n",
+            "Nama: Rasha Sarasvati\n",
+            "NIM: 87654321\n",
+            "IPK: 3.8\n",
+            "Semester:8\n",
+            "SKS Lulus: 140\n",
+            "\n",
+            "--- Info Mahasiswa Magister ---\n",
+            "Nama: Jovian Abraham\n",
+            "NIM: 1234567\n",
+            "IPK: 3.8\n",
+            "Judul Tesis: Pengaruh Teknologi Informasi terhadap Produktivitas Kerja\n",
+            "Nama Pembimbing: Dr. Ahmad Fauzi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pDcfoa4zEtFb"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
